--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <div class="blog-post-image">
                 <img src="img/alharam44.png" class="img-responsive" alt="Blog Image"></div>
 
-                <form action="chatbotcon2.html" method="post" class="tm-contact-form">
+                <form action="chatbotcon2.html" method="form" class="tm-contact-form">
                     <div class="form-group tm-name-container">
                         <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name"  required/>
                     </div>
